--- a/_posts/2018-09-22-PCA.md
+++ b/_posts/2018-09-22-PCA.md
@@ -1,14 +1,12 @@
 ---
 layout: article
-title: pca
+title: Understanding Principal Component Analysis (PCA) 
 key: 20180922
 tags:
 - data visualization
 - machine learning
 mathjax: true
 ---
-# Understaing Principal Component Analysis (PCA) 
-
 During machine learning practice or data analysis, when we get a new dataset, what we can do first is to visualize the data to observe how the data distribute and what the relationship between datapoints. We can easily visualize dataset with 2 or 3 variables by plotting 2-demension(2D) or 3-dimension(3D) figure. However, most of the datasets have quite a large number of variables. Therefore it is important to get to know how to visulize high-dimension dataset. 
 
 <!--more-->
