theme warning config

--- a/_posts/2018-09-22-PCA.md
+++ b/_posts/2018-09-22-PCA.md
@@ -16,8 +16,8 @@ I would like to discuss two popular techniques we usually use for high-dimension
 ## What is PCA
 
 PCA tries to out a smaller set of new variables(principal components, PCs) which can capture most of the variation in dataset. Intuitively, a dimension that has more variability can explain more about the happenings. We can get some simple examples to make it easy to understand. 
-![pca_1](https://raw.githubusercontent.com/xiaoyanzhuo/xiaoyanzhuo.github.io/master/_posts/figures/pca_1.png){:width="450px" height="260px"}
-![pca_2](https://raw.githubusercontent.com/xiaoyanzhuo/xiaoyanzhuo.github.io/master/_posts/figures/pca_2.png){:width="450px" height="260px"}
+![pca_1](https://raw.githubusercontent.com/xiaoyanzhuo/xiaoyanzhuo.github.io/master/_posts/figures/pca_1.png)
+
 
 
 ~~*to be continued*~~
