new PCA images_v2

--- a/_posts/2018-09-22-PCA.md
+++ b/_posts/2018-09-22-PCA.md
@@ -16,7 +16,7 @@ I would like to discuss two popular techniques we usually use for high-dimension
 ## What is PCA
 
 PCA tries to out a smaller set of new variables(principal components, PCs) which can capture most of the variation in dataset. We can get some simple examples to make it easy to understand. 
-![pca_what](https://raw.githubusercontent.com/xiaoyanzhuo/xiaoyanzhuo.github.io/master/_posts/figures/pca_what.png "Figure 1")
+![pca_what](https://raw.githubusercontent.com/xiaoyanzhuo/xiaoyanzhuo.github.io/master/_posts/figures/pca_what.png)
 We can observe from the top of Figure 1 that some dimensions may have more important than others. In this case, we can take 2-D data and display it on a 1-D graph without too much information loss. Both graphs say, “the important variation is left to right”. Intuitively, a dimension that has more variability can explain more about the happenings. 
 
 We can visulize data with more than 3 variables (in this case is 4 variables) in 2D graph by using PCA...
@@ -24,7 +24,7 @@ We can visulize data with more than 3 variables (in this case is 4 variables) in
 
 To describe how the PCA works, we will use two variables simply for convenience. More variables will follow the same way.
 
-![pca_how](https://raw.githubusercontent.com/xiaoyanzhuo/xiaoyanzhuo.github.io/master/_posts/figures/pca_how.png "Figure 2")
+![pca_how](https://raw.githubusercontent.com/xiaoyanzhuo/xiaoyanzhuo.github.io/master/_posts/figures/pca_how.png)
 
 
 ## How PCA works
