--- a/_posts/2019-01-18-Perf-Tool.md
+++ b/_posts/2019-01-18-Perf-Tool.md
@@ -49,7 +49,7 @@ You can check if you have the right version as warning list by:
 
 `$sudo apt-cache search linux-tools`
 
-If not, you can go to search the packages required online, like what I needed for my system is the package *linux-tools-4.4.0-131-generic*, which I found ![here](https://packages.ubuntu.com/en/trusty-updates/linux-tools-4.4.0-131-generic), select your architecture type and followed the instruction. You may need to add new mirror site which contained the package required to your apt source list.
+If not, you can go to search the packages required online, like what I needed for my system is the package *linux-tools-4.4.0-131-generic*, which I found [here](https://packages.ubuntu.com/en/trusty-updates/linux-tools-4.4.0-131-generic), select your architecture type and followed the instruction. You may need to add new mirror site which contained the package required to your apt source list.
 
 `$cd /etc/apt/`
 
@@ -106,7 +106,7 @@ You can check the value in kptr_restrict has been changed from 1 to 0.
 
 Now you can run `$perf record -e cache-misses ./test` and get the perf report then.
 
-More tutorials about perf tool can be found on ![perf wiki](https://perf.wiki.kernel.org/index.php/Tutorial#Sample_analysis_with_perf_report)
+More tutorials about perf tool can be found on [perf wiki](https://perf.wiki.kernel.org/index.php/Tutorial#Sample_analysis_with_perf_report)
 
 You may also check another useful tool about perf: https://github.com/brendangregg/perf-tools
 
