--- a/_posts/2019-01-18-Perf-Tool.md
+++ b/_posts/2019-01-18-Perf-Tool.md
@@ -18,13 +18,13 @@ Examples:
 * system 1: Ubuntu 16.04.5 LTS (GNU/Linux 4.4.0-131-generic x86_64)
 * system 2: Ubuntu 16.04.2 LTS (4.4.77)
 
-#### check kernel version
+### check kernel version
 `$uname -r` (return: *4.4.0-131-generic* in system 1)
  (or return: *4.4.77* in system 2)
  
 You can also check if perf has been installed in your system by:
 
-#### check perf version
+### check perf version
 `$perf --version` 
 
 If you have right one, you will see the version of perf
@@ -33,8 +33,9 @@ or by `$cd /usr/lib`
 
 check if you have 'linux-tools' dir. If so, you can `$cd linux-tools` to see the perf tool dir like '4.4.0-131-generic'.  These two ways can be used to check after you install the perf tool.
 
-#### Install perf tool
+### Install perf tool
 
+#### case1 (for system 1)
 If you don't have perf on the system, easiest way you can do is:
 
 `$sudo apt-get update`
@@ -43,7 +44,7 @@ If you don't have perf on the system, easiest way you can do is:
 
 or `$sudo apt-get install linux-tools-common linux-tools-generic`
 
-If you kernel version and linux-tool-generic version are same, you may be done here. However, most of time, the current update version may not be the same as what required. When you check `$perf --version`, you may get *WARNING: perf not found for kernel and you may need to install the following packages for this specific kernel: ...* ,which the right version required.
+If you kernel version and linux-tool-generic version are same, you may be done here. However, most of time, the current update version may not be the same as what required. When you check `$perf --version`, you may get *WARNING: perf not found for kernel and you may need to install the following packages for this specific kernel: ...* ,where the right version is required.
 
 You can check if you have the right version as warning list by:
 
@@ -63,6 +64,7 @@ After you update the sources list and you can install the pacakage.
 
 Then you can check the perf version `perf --version` and you can see the perf tool version without asking to install pacakge and you are all set. You can use your pert tool now. 
 
+#### case 2 (for system 2)
 Wait, that is not the end. If returning result of `$uname -r` is like this `4.4.77`, the previous way may not work. If you do `$sudo apt-get install linux-tools-4.4.77` but cannot get the tool installed. In this case, download the required linux kernel version (our case is v4.4.77) and go to 'linux->tools->perf' to install it.
 
 `$git clone git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git`
@@ -83,7 +85,7 @@ After doing this, you can try `$perf --version` and hope it works for you now.
 
 After `make`, you can also try `make install` and then check the `perf --version`.
 
-## Basic usuage of perf tool
+## Basic usuage
 
 example:
 
