update links in ref

--- a/_posts/2019-01-18-Perf-Tool.md
+++ b/_posts/2019-01-18-Perf-Tool.md
@@ -110,16 +110,17 @@ Now you can run `$perf record -e cache-misses ./test` and get the perf report th
 
 More tutorials about perf tool can be found on [perf wiki](https://perf.wiki.kernel.org/index.php/Tutorial#Sample_analysis_with_perf_report)
 
-You may also check another useful tool about perf: https://github.com/brendangregg/perf-tools
+You may also check another useful [Perf-tools](https://github.com/brendangregg/perf-tools) on github.
 
 
 ##### [References]
-1. https://perf.wiki.kernel.org/index.php/Tutorial#Sample_analysis_with_perf_report
-2. https://askubuntu.com/questions/50145/how-to-install-perf-monitoring-tool
-3. https://ubuntu-mate.community/t/howto-install-perf-on-ubuntu-mate16-04-rpi3-model-b/15572
-4. https://stackoverflow.com/questions/20390601/is-there-a-way-to-set-kptr-restrict-to-0
-5. https://packages.ubuntu.com/xenial-updates/amd64/linux-tools-4.4.0-131-generic/download
-6. https://github.com/brendangregg/perf-tools
+1. [perf wiki](https://perf.wiki.kernel.org/index.php/Tutorial#Sample_analysis_with_perf_report)
+2. [how-to-install-perf-monitoring-tool](https://askubuntu.com/questions/50145/how-to-install-perf-monitoring-tool)
+3. [howto-install-perf-on-ubuntu-mate16](https://ubuntu-mate.community/t/howto-install-perf-on-ubuntu-mate16-04-rpi3-model-b/15572)
+4. [perf 性能分析实例——使用perf优化cache利用率](https://www.ibm.com/developerworks/community/blogs/5144904d-5d75-45ed-9d2b-cf1754ee936a/entry/perf_introduction?lang=en)
+5. [set-kptr-restrict-to-0](https://stackoverflow.com/questions/20390601/is-there-a-way-to-set-kptr-restrict-to-0)
+6. [download linux-tools](https://packages.ubuntu.com/xenial-updates/amd64/linux-tools-4.4.0-131-generic/download)
+7. [Another useful Perf-tools on github](https://github.com/brendangregg/perf-tools)
 
 
 
