--- a/_posts/2019-01-18-Perf-Tool.md
+++ b/_posts/2019-01-18-Perf-Tool.md
@@ -112,6 +112,18 @@ More tutorials about perf tool can be found on [perf wiki](https://perf.wiki.ker
 
 You may also check another useful [Perf-tools](https://github.com/brendangregg/perf-tools) on github.
 
+Others: tried the same steps in container, however, cannot do the same perf operations in container.
+
+~~~
+jovyan@7eeaf145b774:~/work$ perf stat -e cache-misses ./test
+Error:
+You may not have permission to collect stats.
+Consider tweaking /proc/sys/kernel/perf_event_paranoid:
+ -1 - Not paranoid at all
+  0 - Disallow raw tracepoint access for unpriv
+  1 - Disallow cpu events for unpriv
+  2 - Disallow kernel profiling for unpriv
+~~~
 
 ##### [References]
 1. [perf wiki](https://perf.wiki.kernel.org/index.php/Tutorial#Sample_analysis_with_perf_report)
